syntax = "proto3";

package digitalkin;

// Messages pour les agents
message CreateAgentRequest {
  string name = 1;
  string description = 2;
}

message GetAgentRequest {
  string id = 1;
}

message ListAgentsRequest {
}

message UpdateAgentRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message DeleteAgentRequest {
  string id = 1;
}

// Messages pour les conversations
message StartConversationRequest {
  string agentId = 1;
  string message = 2;
}

message SendMessageRequest {
  string conversationId = 1;
  string message = 2;
}
